# dominoFitSolver

./: .gitignore  README.md  app.py  config.py  launch.json  pyproject.toml  tasks.json
models/: Board.py
static/: None
static/css/: style.css
templates/: base.html.j2  builder.html  index.html.j2
utils/: DominoFit.py  Solver.py  SvgGens.py  helpers.py
